--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <link rel="icon" type="image/png" href="https://drive.google.com/uc?export=view&id=1uhu1TMksktDMT177b6Vf7_Wte6e7FuxU" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Ignite Timer</title>
   </head>
   <body>
     <div id="root"></div>
